--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .App {
-    background-image: url('../src/images/bg1.jpg');
+    background-color: cornsilk;
     width: 100%;
     height: 700px;
     background-position: center; /* Center the image */
